...
                    Spacer()
                    Color("SecondaryBackgroundColor").frame(height: UIApplication.shared.windows.first?.safeAreaInsets.bottom)
                }.ignoresSafeArea()
                VStack {
                    MainHeader(tabName: MainViewModel.tabs[viewModel.selectedTab].tabName)
                        .frame(height: appState.isUserLoggedIn ? 60 : 50)
                        .padding(.horizontal).accessibilityIdentifier("SelectedTabTitleName")
                    
                    //TabView(selection: $viewModel.selectedTab){
                    switch viewModel.selectedTab {
                    case 0:
                        HomeView(mainViewModel: self.viewModel)
                    case 1:
...
